[gd_scene load_steps=5 format=3 uid="uid://d3tcle5ahu4bh"]

[ext_resource type="Script" path="res://scripts/ui/settingsMenu.gd" id="1_b3hfw"]
[ext_resource type="Texture2D" uid="uid://c235blrpdnvdw" path="res://assets/images/icons/iconSmallSoundOn.png" id="2_h4cf1"]
[ext_resource type="Texture2D" uid="uid://p3kypxud4gin" path="res://assets/images/icons/iconSmallMusicOn.png" id="3_fwsxu"]
[ext_resource type="Texture2D" uid="uid://bas4ff80tj2f8" path="res://assets/images/2D Platformer Tileset/Simple UI Pack/Sprites/Icons/icon_small_notification.png" id="4_sig4j"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b3hfw")

[node name="SettingsMenuCanvasLayer" type="CanvasLayer" parent="."]

[node name="BackgroundPanelContainer" type="PanelContainer" parent="SettingsMenuCanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"PanelContainerBlackTransparent"

[node name="SettingsPanelContainer" type="PanelContainer" parent="SettingsMenuCanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -375.0
offset_top = -223.5
offset_right = 375.0
offset_bottom = 223.5
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsVBoxContainer" type="VBoxContainer" parent="SettingsMenuCanvasLayer/SettingsPanelContainer"]
layout_mode = 2

[node name="SettingsMarginContainer" type="MarginContainer" parent="SettingsMenuCanvasLayer/SettingsPanelContainer/SettingsVBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = -60

[node name="SettingsLavel" type="Label" parent="SettingsMenuCanvasLayer/SettingsPanelContainer/SettingsVBoxContainer/SettingsMarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"LabelHeader"
text = "settings
"
horizontal_alignment = 1

[node name="CloseIconMarginContainer" type="MarginContainer" parent="SettingsMenuCanvasLayer/SettingsPanelContainer/SettingsVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_constants/margin_top = -65
theme_override_constants/margin_right = -40

[node name="CloseIconButton" type="Button" parent="SettingsMenuCanvasLayer/SettingsPanelContainer/SettingsVBoxContainer/CloseIconMarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"ButtonIconUi"

[node name="MarginContainer" type="MarginContainer" parent="SettingsMenuCanvasLayer/SettingsPanelContainer/SettingsVBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsMenuCanvasLayer/SettingsPanelContainer/SettingsVBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="MusicButton" type="Button" parent="SettingsMenuCanvasLayer/SettingsPanelContainer/SettingsVBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"ButtonBlue"
text = "Music"
icon = ExtResource("3_fwsxu")

[node name="SoundButton" type="Button" parent="SettingsMenuCanvasLayer/SettingsPanelContainer/SettingsVBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"ButtonBlue"
text = "Sound"
icon = ExtResource("2_h4cf1")

[node name="NotificationsButton" type="Button" parent="SettingsMenuCanvasLayer/SettingsPanelContainer/SettingsVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Notifications"
icon = ExtResource("4_sig4j")

[connection signal="pressed" from="SettingsMenuCanvasLayer/SettingsPanelContainer/SettingsVBoxContainer/CloseIconMarginContainer/CloseIconButton" to="." method="_on_close_icon_button_pressed"]
[connection signal="toggled" from="SettingsMenuCanvasLayer/SettingsPanelContainer/SettingsVBoxContainer/MarginContainer/HBoxContainer/MusicButton" to="." method="_on_music_button_toggled"]
[connection signal="toggled" from="SettingsMenuCanvasLayer/SettingsPanelContainer/SettingsVBoxContainer/MarginContainer/HBoxContainer/SoundButton" to="." method="_on_sound_button_toggled"]
[connection signal="toggled" from="SettingsMenuCanvasLayer/SettingsPanelContainer/SettingsVBoxContainer/NotificationsButton" to="." method="_on_notifications_button_toggled"]
